2004-08-10  Caroline Tice  <ctice@apple.com

	* varasm.c (unlikely_section_label): New global variable.
	(unlikely_text_section_name): New global variable.
	(text_section):  Remove alignment statement.
	(unlikely_text_section): Remove alignment statement; use 
	unlikely_section_label rather than hard-coded string.
	(assemble_start_function): Initialize unlikely_section_label and
	unlikely_text_section_name;  make sure cold section is properly
	aligned at start of function; output unlikely_section_label if
	appropriate.

2004-08-10  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390-protos.h (s390_canonicalize_comparison): Declare.
	* config/s390/s390.c (s390_canonicalize_comparison): New function.
	* config/s390/s390.h (CANONICALIZE_COMPARISON): Define.
	* config/s390/s390.md ("*tmdi_ext", "*tmsi_ext", "*tmqisi_ext",
	"*tmqidi_ext", "*tmdi_mem", "*tmsi_mem", "*tmhi_mem"): Remove.
	("*tmqi_mem"): Remove SUBREG from pattern.
	("*anddi3_cconly"): Prevent accidentally matching TM pattern.
	("*andsi3_cconly"): Likewise.
	
2004-08-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/16909
	* config/i386/i386.md (*strsetdi_rex_1): Use DI instead of SI.

2004-08-10  Janis Johnson  <janis187@us.ibm.com>

	* doc/sourcebuild.texi (compat testing): Document available test
	framework commands.  Use the preferred spelling of DejaGnu.

2004-08-10  Daniel Berlin <dberlin@dberlin.org>

	* lambda.h: Add matrix type, and prototypes for remainder of
	matrix and vector functions.
	(lambda_vector_mult_const): New function.
	(lambda_vector_negate): Ditto.
	(lambda_vector_add): Ditto.
	(lambda_vector_add_mc): Ditto.
	(lambda_vector_copy): Ditto.
	(lambda_vector_zerop): Ditto.
	(lambda_vector_equal): Ditto.
	(lambda_vector_min_nz): Ditto.
	(lambda_vector_first_nz): Ditto.
	(lambda_vector_matrix_mult): Ditto.
	* lambda-mat.c: New file.
	* Makefile.in (lambda-mat.o): New.

2004-08-10  Andrew MacLeod  <amacleod@redhat.com>
