@@ -9093,6 +9093,20 @@
   "{stsi|stswi} %2,%1,%O0"
   [(set_attr "type" "store")])
 
+(define_expand "clrmemsi"
+  [(parallel [(set (match_operand:BLK 0 "" "")
+		   (const_int 0))
+	      (use (match_operand:SI 1 "" ""))
+	      (use (match_operand:SI 2 "" ""))])]
+  ""
+  "
+{
+  if (expand_block_clear (operands))
+    DONE;
+  else
+    FAIL;
+}")
+
 ;; String/block move insn.
 ;; Argument 0 is the destination
 ;; Argument 1 is the source
